--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,7 +59,7 @@ body {
   background: #F5F1ED;
 }
 
-.food-name {
+.centered-text {
   color: #252323;
   text-align: center;
   font-size: larger;
@@ -67,11 +67,16 @@ body {
   text-decoration: none;
 }
 
+.padded {
+  padding: 0.5rem;
+}
+
 /* Container for fixed positioning */
 .floating-button-container {
   position: fixed;
   right: 1.5rem;
   bottom: 1.5rem;
+  z-index: 1000;
 }
 @media (max-width: 600px) {
   .floating-button-container {
@@ -191,13 +196,20 @@ body {
   background-color: #DAD2BC;
   border: 2px solid #252323;
   border-radius: 8px;
-  overflow: hidden;
   cursor: pointer;
   transition: transform 0.2s;
+  place-items: center;
 }
 .pantry-item:hover {
   transform: translateY(-10px);
   filter: brightness(90%);
+}
+@media (max-width: 600px) {
+  .pantry-item {
+    width: max(-moz-fit-content);
+    width: max(fit-content);
+    width: 10rem;
+  }
 }
 
 .food-container {
